Fixed alignment

--- a/src/styles/landing_style.css
+++ b/src/styles/landing_style.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     margin: 0;
     height: 100%;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -403,22 +402,24 @@ body.light .switch::before{
 .page-content{
     display: grid;
     justify-content: center;
-    grid-template-rows: 2.2fr 2fr 0.5fr;
-    width: 100%;
+    grid-template-rows: 2fr 1.4fr 0.5fr;
+    overflow: hidden;
 }
+
 /*------------slide------------*/
 .slide-container{
     position: relative;
-    left: 250px;
+    left: 150px;
     top: 20px;
-    width: 80%;
-    height: 800px;
+    width: 1100px;
+    height: 700px;
     border: 3px solid #1c2c2e;
     border-radius: 4px;
     box-shadow: 0 0 8px 2px rgba(255,255,0,0.2);
 }
 
 .slide-container .slides{
+    display: grid;
     width: 100%;
     height: 100%;
     /* height: calc(100% - 40px); */
@@ -535,7 +536,7 @@ span.next:hover, span.prev:hover{
     background-color: #32b8c6;
     width: fit-content;
     padding: 5px 5px;
-    left: 43%;
+    left: 430px;
     z-index: 1;
 }
 
@@ -567,27 +568,25 @@ hr{
 .lower-part{
     display: grid;
     grid-row: 2;
-    grid-template-columns: 4fr 0.5fr;
+    grid-template-columns: 2.5fr 0.5fr;
     justify-content: center;
+    padding: 0 0;
 }
 
 .intro-block{
+    display: flex;
     position: relative;
-    height: 100%;
+    left: 200px;
 }
 .intro-block p{
-    position: relative;
     background-color: #121212;
-    /* align-items: center;
-    justify-content: center; */
-    left: 250px;
-    margin: 20px; /*padding luar*/
+    margin: 10px; /*padding luar*/
     border-radius: 15px;
     grid-column: 1;
     padding: 1rem ;
     font-size: 20px;
     width: 700px;
-    height: 800px;
+    height: 1fr;
 
 }
 
@@ -597,7 +596,6 @@ hr{
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    margin-right: 100px;
     top: 50px;
 }
 
@@ -606,25 +604,33 @@ hr{
     left: 150px;
 }
 
+.vision{
+    position: relative;
+    width: 50%;
+}
 .algo h1{
     font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
-    font-size: 7rem;
+    font-size: 90px;
     font-weight: 800;
     writing-mode: vertical-lr;
     text-orientation: upright;
     position: relative;
-    color: #b1e0e5;
+    /* color: #b1e0e5; */
+    color: white;
+    -webkit-text-stroke: 3px grey;
+    /* -webkit-text-stroke: 3px #73a5c6; */
 }
 
 .vision h2{
     font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
-    font-size: 7rem;
+    font-size: 90px;
     font-weight: 800;
     writing-mode: vertical-lr;
     text-orientation: upright;
     color: #b1e0e5;
+    -webkit-text-stroke: 3px #73a5c6;
 }
 
 /*---------footer-------------*/
@@ -632,20 +638,33 @@ hr{
     display: block;
     background-color: #1c2c2e;
     color: #b1e0e5;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
 }
 
 .footer h1{
     position: relative;
     width: fit-content;
-    left: 50%;
+    display: inline-block;
 }
 
-.footer .names{
+.footer .contributer-names{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin: 0 260px;
+    position: relative;
 }
 
+.footer .contributer-names .nama{
+    flex-direction: column;
+}
 
+.footer .contributer-names img{
+    position: relative;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
